--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
         </div>
         <p class="footer">Double Click or Refresh Page to get weather details<p>
-            <p class="footer2">Check code on <a href="https://github.com/Icon3610/open-weather">Github</a></p>
+            <p class="footer2">Check code on <a href="https://github.com/Icon3610/open-weather" target="_blank">Github</a></p>
     <script src="https://kit.fontawesome.com/a692e1c39f.js" crossorigin="anonymous" ></script>
     <script src="script.js"></script>
 </body>
